@@ -13,7 +13,57 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<aspectj.version>1.9.5</aspectj.version>
 	</properties>
+
+	<build>
+
+		<plugins>
+		<!-- Compiler plugin is used to check any syntax error or compilation error is there  -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+			
+			<!-- Surefire plugin is used to execute your test cases under src/test/java package  -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.20</version>
+
+				<configuration>
+					<forkCount>3</forkCount>
+					<reuseForks>true</reuseForks>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+	     <!-- If you want to execute your test cases from testng.xml file than mentioned testng file path here  -->
+					<suiteXmlFiles>
+						<suiteXmlFile>src/test/resources/testRunners/testng.xml</suiteXmlFile>
+					</suiteXmlFiles>
+         <!-- For allure report need to add java agent as argLine. This javaagent path is already define  -->
+					<argLine>
+						-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+					</argLine>
+
+				</configuration>
+       <!-- For allure report one separate dependency also needed -->
+				<dependencies>
+					<dependency>
+						<groupId>org.aspectj</groupId>
+						<artifactId>aspectjweaver</artifactId>
+						<version>${aspectj.version}</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+
+		</plugins>
+
+	</build>
 
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
@@ -28,7 +78,6 @@
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
 			<version>6.14.3</version>
-			<scope>test</scope>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
@@ -52,6 +101,7 @@
 			<version>4.3.0</version>
 		</dependency>
 
+       <!-- This dependencies for Read Data from Excel -Apache poi -->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
@@ -87,6 +137,50 @@
 			<artifactId>openxml4j</artifactId>
 			<version>1.0-beta</version>
 		</dependency>
+		
+		 <!-- This dependencies for Allure Report and Extend Report  -->
+		 <dependency>
+			<groupId>com.aventstack</groupId>
+			<artifactId>extentreports</artifactId>
+			<version>3.1.5</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.lowagie</groupId>
+			<artifactId>itext</artifactId>
+			<version>2.1.7</version>
+		</dependency>
+			
+		<dependency>
+			<groupId>io.qameta.allure</groupId>
+			<artifactId>allure-testng</artifactId>
+			<version>2.12.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+		
+		<dependency>
+       		<groupId>org.aspectj</groupId>
+           	<artifactId>aspectjweaver</artifactId>
+    		<version>1.9.5</version>
+    		<scope>runtime</scope>
+		</dependency>
+
+	   <dependency>
+		   <groupId>com.tesults.testng</groupId>
+		   <artifactId>tesults-testng</artifactId>
+		   <version>1.0.2</version>
+	   </dependency>
+    <!-- This dependencies create report in Tesult Site -->
+	  <dependency>
+          <groupId>com.tesults.testng</groupId>
+          <artifactId>tesults-testng</artifactId>
+          <version>1.0.2</version>
+      </dependency>
 
 	</dependencies>
 </project>
